# cornucopia

./: requirements.txt  runtests.py  setup.cfg
cornucopia/: apps.py
tests/: test_settings.py
