[metadata]
name = cornucopia
version = 0.0.1
author = AlexandraAlter
author_email = alexandra.alter@protonmail.com
description = An image gallery application backed by Postgres
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/AlexandraAlter/cornucopia
project_urls =
    Bug Tracker = https://github.com/AlexandraAlter/cornucopia/issues
classifiers =
    License :: OSI Approved :: The Unlicense (Unlicense)

    Operating System :: OS Independent

    Development Status :: 1 - Planning

    Environment :: Web Environment

    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9

    Framework :: Django
    Framework :: Django :: 3.1

    Intended Audience :: Developers

    Topic :: Multimedia :: Graphics :: Viewers
    Topic :: Multimedia :: Sound/Audio :: Players
    Topic :: Multimedia :: Video :: Display
    Topic :: System :: Archiving
    Topic :: Utilities

[options]
packages = find:
python_requires = >=3.9
install_requires =
    django>=3.1
    psycopg2>=2.8
    Pillow>=8.1

[yapf]
based_on_style = pep8
indent_width = 2
continuation_indent_width = 2

